clarat-org/clarat#993 Kontaktformular: Responsivität & Dankesseite
Anstatt einer statischen wird der Inhalt dynamisch verändert.
betrifft auch clarat-org/clarat#960 (braucht pull auf Clarat_base)

--- a/app/assets/stylesheets/modules/_js.scss
+++ b/app/assets/stylesheets/modules/_js.scss
@@ -11,6 +11,7 @@
     transform: translate(-6px, 0);
   }
   &.JS-Single-Click-Button__active {
+    background-color: #8cbd86;
     cursor: default;
   }
 }
