--- a/app/views/contacts/new.html.slim
+++ b/app/views/contacts/new.html.slim
@@ -1,4 +1,4 @@
 main.content-main.section-content--contact
   .wrapper-inner
-    h2= t '.contact_heading'
+    h2.contact_heading = t '.contact_heading'
     = render '/contacts/shared/new', contact: @contact
