--- a/app/views/contacts/shared/_new.html.slim
+++ b/app/views/contacts/shared/_new.html.slim
@@ -1,7 +1,7 @@
 - reporting = contact.reporting?
 = simple_form_for contact, html: { class: 'contact-form' }, remote: true do |f|
   - if reporting
-    p= t('.send_us_a_message')
+    p.contact_heading= t('.send_us_a_message')
   = f.input :name, label: false, hint: false,
                    input_html: { placeholder: t('.name_placeholder') }
   = f.input :email, label: false, hint: false,
@@ -9,6 +9,8 @@
                     input_html: { \
                       placeholder: \
                         t(".email_placeholder.required.#{!reporting}") }
+  = f.input :city, label: false, hint: false,
+                    input_html: { placeholder: t('.city_placeholder') }
   = f.input :message, label: false, hint: false,
                       input_html: { placeholder: t('.message_placeholder') }
   = f.input :url, as: :hidden
