--- a/app/views/layouts/modal_create.js.erb
+++ b/app/views/layouts/modal_create.js.erb
@@ -5,11 +5,14 @@ $('.contact_heading').html(
              content: yield
   %>"
 );
+$('.js-report-overlay_close').css("background-color","#8cbd86");
+$('.JS-Single-Click-Button__active').css("background-color","#8cbd86");
+$('.JS-Single-Click-Button__active').click(function() {$('.popup_content_visible').popup('hide');});
 $('.contact_name').hide();
 $('.contact_email').hide();
 $('.contact_city').hide();
 $('.contact_message').hide();
 if(window.location.href.indexOf("kontakt") > -1) {
-$('.contact_message').wrap( ' <p><a href="https://www.clarat.org">Zurück zur Startseite</a></p>' );
+$('.contact_message').wrap( ' <p><a href="/">Zurück zur Startseite</a></p>' );
 }
 <%= content_for :additional_js %>
