--- a/app/assets/stylesheets/modules/_section-choice.scss
+++ b/app/assets/stylesheets/modules/_section-choice.scss
@@ -47,15 +47,17 @@
   @extend %clarat_rounding_end;
   width: auto;
   min-width: 90%;
-  height: 90px;
+  min-height: 90px;
   background: image-url('skinny-arrow-right.svg') no-repeat 14px center ;
   background-size: 28px 49px;
   color: $brand_white;
   text-decoration: none;
   margin: -1px 28px 0;
-  padding: 7px 7px 7px 55px;
+  padding: 6px 7px 9px 55px;
   font-size: 27px;
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  line-height: 1.33;
 }
 
 .section-choice__cta--refugees {
