refactor to presenter logic
clarat-org/clarat#993
Kontaktformular: Responsivität & Dankesseite

--- a/app/assets/stylesheets/modules/_js-modal.scss
+++ b/app/assets/stylesheets/modules/_js-modal.scss
@@ -21,6 +21,7 @@
   }
 
   button[class$="overlay_close"],
+  button[class$="overlay_close greenOverlay"],
   button[class$="big-map_close"],
   [class$="beta_banner_close"] {
     position: absolute;
@@ -28,6 +29,9 @@
     right: -10px;
     width: 30px;
     height: 30px;
+  }
+  .greenOverlay {
+    background-color: #8cbd86;
   }
 }
 
