--- a/app/assets/stylesheets/modules/_js.scss
+++ b/app/assets/stylesheets/modules/_js.scss
@@ -13,4 +13,7 @@
   &.JS-Single-Click-Button__active {
     cursor: default;
   }
+  &.JS-Single-Click-Button__fin {
+    background-color: #8cbd86;
+  }
 }
