--- a/app/views/layouts/modal_create.js.erb
+++ b/app/views/layouts/modal_create.js.erb
@@ -1,22 +1,1 @@
-$('.contact_heading').html(
-  "<%=
-    j render 'layouts/partials/h2',
-             type: 't.contacts.create.success',
-             content: yield
-  %>"
-);
-$('.js-report-overlay_close').css("background-color","#8cbd86");
-$('.JS-Single-Click-Button__active').css("background-color","#8cbd86");
-$('.JS-Single-Click-Button__active').click(function() {$('.popup_content_visible').popup('hide');});
-$('.contact_name').hide();
-$('.contact_email').hide();
-$('.contact_city').hide();
-$('.contact_message').hide();
-if(window.location.href.indexOf("kontakt") > -1) {
-  if(window.location.href.indexOf("family") > -1) {
-    $('.contact_message').wrap( ' <p><a href="/family"> < zurück zu clarat family</a></p>' );
-  } else {
-    $('.contact_message').wrap( ' <p><a href="/refugees"> < zurück zu clarat refugees</a></p>' );
-  }
-}
-<%= content_for :additional_js %>
+$('.Contact-Submit').trigger('formsent');
