--- a/public/landingpage/assets/css/main.css
+++ b/public/landingpage/assets/css/main.css
@@ -4,7 +4,7 @@ html,
 body {
 	height: 100%;
 	min-height: 100%;
-	background: #f6eedc url(/landingpage/assets/images/bg--family.svg) no-repeat center calc(100% - 98px);
+	background-color: #f6eedc;
 	background-size: 75% auto;
 	overflow: auto;
 }
@@ -105,7 +105,7 @@ a {
 
 .content h2 {
 	font-size: 1.75em;
-	line-height: 1.2;
+	line-height: 1.4;
 	margin-bottom: .65em;
 }
 
@@ -114,8 +114,8 @@ a {
 	margin-bottom: 128px;
 }
 
-.content p + p {
-	margin-top: 28px;
+.content p {
+	margin-bottom: 28px;
 }
 
 /* ############## Generic ############## */
@@ -183,11 +183,12 @@ a {
 
 .content__left {
 	padding-right: 14px;
+	min-width: 40%;
+
 }
 
 .content__right {
 	padding-left: 14px;
-
 }
 
 .content__container::before {
@@ -201,24 +202,22 @@ a {
 	background-color: #F6B600;
 }
 
-.cta__left,
-.cta__right {
+.cta__btn-container,
+.cta__info {
 	padding: 1em 0;
 }
 
-.cta__left {
-	order: 1;
+.cta__btn-container {
 	flex: 1 1 50%;
 	text-align: right;
-	margin-right: 28px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 }
 
-.cta__right {
-	order: 2;
+.cta__info {
 	flex: 1 1 50%;
+	margin-right: 28px;
 }
 
 /* ############## Footer ############## */
@@ -271,8 +270,12 @@ a {
 		padding: 20px;
 	}
 
-	.content__container {
-		margin: 0 20px;
+	.cta__btn-container {
+		margin-right: 28px;
+	}
+
+	.cta__info {
+		margin-left: 28px;
 	}
 }
 
@@ -289,6 +292,10 @@ a {
 
 	.hero {
 		padding-bottom: 33%;
+	}
+
+	.cta__info br {
+		display: none;
 	}
 }
 
@@ -345,6 +352,28 @@ a {
 
 	.content h2 {
 		font-size: 1.45em;
+	}
+
+	.cta__info {
+		display: none;
+	}
+
+	.cta-container {
+		height: 70px;
+	}
+
+	.cta__btn-container {
+		margin: 0 20px;
+	}
+
+	.content {
+		margin-bottom: 70px;
+	}
+
+	.footer-main {}
+
+	.footer-main__list {
+		flex-wrap: wrap;
 	}
 
 }
