--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,34 +4,10 @@ html class='no-js' lang=I18n.locale dir="#{(I18n.locale==:ar)?'rtl':'ltr'}"
     meta charset="utf-8"
     title
       = full_title(yield(:title))
-
-    - og_title = yield(:meta_title)
-    - if !og_title.blank?
-      meta property="og:title" content=og_title
-      meta property="twitter:title" content=og_title
-    - else
-      meta property="og:title" content=t("pages.home.meta_title.#{@current_section}")
-      meta property="twitter:title" content=t("pages.home.meta_title.#{@current_section}")
-
+    meta property="og:title" content=full_title(yield(:title))
     - meta_description = yield(:meta_description)
-    - if !meta_description.blank?
+    - if meta_description
       meta name='description' content=meta_description
-      meta name='og:description' content=meta_description
-      meta name='twitter:description' content=meta_description
-    - else
-      meta name='description' content=t("pages.home.meta_description.#{@current_section}")
-      meta name='og:description' content=t("pages.home.meta_description.#{@current_section}")
-      meta name='twitter:description' content=t("pages.home.meta_description.#{@current_section}")
-
-    - og_image = yield(:og_image)
-    - if og_image
-      meta property="og:image" content=asset_url("meta/og_#{@current_section}.png")
-
-    - twitter_image = yield(:twitter_image)
-    - if twitter_image
-      meta property="twitter:image" content=asset_url("meta/tw_#{@current_section}.png")
-
-    meta property="og:site_name" content="clarat"
 
     = yield(:additional_meta_tags)
 
