--- a/app/views/layouts/partials/_head.html.slim
+++ b/app/views/layouts/partials/_head.html.slim
@@ -3,6 +3,10 @@ meta http-equiv="X-UA-Compatible" content="IE=edge"
 meta( name="viewport"
       content="width=device-width, initial-scale=1.0, user-scalable=1")
 
+/ TODO: Fill these
+meta property="og:site_name" content=""
+meta property="og:image" content=""
+
 link( rel="apple-touch-icon"
       sizes="57x57"
       href="/favicons/apple-touch-icon-57x57.png")
