--- a/app/assets/stylesheets/modules/_map.scss
+++ b/app/assets/stylesheets/modules/_map.scss
@@ -37,7 +37,7 @@
 // Dealing with BESbewy phenomenon of GM Api in AR locale
 // http://stackoverflow.com/questions/29587637/remove-besbewy-from-google-api
 
-body.ar {
+html[dir="rtl"] {
   &.has-google-map {
     & > span:last-of-type {
       display: none !important;
