--- a/app/assets/stylesheets/modules/sections/_section-content.scss
+++ b/app/assets/stylesheets/modules/sections/_section-content.scss
@@ -54,7 +54,7 @@
     position: relative;
     padding-right: 70px;
 
-    body.ar & {
+    html[dir="rtl"] & {
       padding-left: 70px;
       padding-right: 15px;
     }
