--- a/app/assets/stylesheets/form/_filter-form.scss
+++ b/app/assets/stylesheets/form/_filter-form.scss
@@ -214,7 +214,7 @@
     margin: 0 0 3px 19px;
     font-size: 12px;
 
-    body.ar & {
+    html[dir="rtl"] & {
       margin: 0 19px 3px 0;
     }
   }
@@ -224,7 +224,7 @@
     top: 5px;
     left: 0;
 
-    body.ar & {
+    html[dir="rtl"] & {
       right: 0;
       left: auto;
     }
