--- a/app/assets/stylesheets/modules/_automated-translation.scss
+++ b/app/assets/stylesheets/modules/_automated-translation.scss
@@ -13,7 +13,7 @@
   width: 62px;
   background: rgba(255, 255, 255, .33);
 
-  body.ar & {
+  html[dir="rtl"] & {
     left: 0;
     right: auto;
   }
@@ -26,7 +26,7 @@
     display: inline-block;
     padding-right: 40px;
 
-    body.ar & {
+    html[dir="rtl"] & {
       padding-left: 40px;
       padding-right: 0;
     }
@@ -58,7 +58,7 @@
     width: 54px;
     left: 4px;
 
-    body.ar & {
+    html[dir="rtl"] & {
       left: auto;
       right: 4px;
     }
