--- a/app/assets/stylesheets/modules/_categories.scss
+++ b/app/assets/stylesheets/modules/_categories.scss
@@ -8,7 +8,7 @@
   @extend %layout-col-29;
   margin: 26px 2.5% 20px 0;
 
-  body.ar & {
+  html[dir="rtl"] & {
     margin: 26px 0 20px 2.5%;
   }
 }
@@ -60,7 +60,7 @@
       left: -10px;
       font-weight: 700;
 
-      body.ar & {
+      html[dir="rtl"] & {
         right: -19px;
         left: auto;
       }
@@ -98,7 +98,7 @@
         left: -9px;
         font-weight: 700;
 
-        body.ar & {
+        html[dir="rtl"] & {
           right: -19px;
           left: auto;
         }
@@ -153,7 +153,7 @@
 .Categories__list .Categories__list {
   padding-left: 30px;
 
-  body.ar & {
+  html[dir="rtl"] & {
     padding-right: 30px;
     padding-left: 0;
   }
