--- a/app/assets/stylesheets/modules/_faq.scss
+++ b/app/assets/stylesheets/modules/_faq.scss
@@ -23,7 +23,7 @@
   ul {
     padding-left: 2em;
 
-    body.ar & {
+    html[dir="rtl"] & {
       padding-left: 0;
       padding-right: 2em;
     }
