--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -20,21 +20,21 @@
                                              current_section: current_section
 
       - cache ['category_navigation', current_section, I18n.locale] do
-
         nav.nav-sections
           h3.nav-sections__headline = t '.category_headline'
 
           ul.nav-sections__list
             - Category.mains.in_section(current_section).each do |main|
               li.nav-sections__listitem(
-                class="nav-sections__listitem--#{main.icon}"
+                class="nav-sections__listitem--#{main.icon} JS-Geolocation__display"
               )
-                = link_to main.name, offers_path( \
-                    'search_form[category]' => main.name,
-                    'search_form[search_location]' => \
-                      search_form.search_location,
-                    'search_form[generated_geolocation]' => \
-                      search_form.generated_geolocation,
-                    'search_form[section]' => \
-                      current_section),
-                    locale: I18n.locale
+                - puts "<<<<<<<<<<<<<<< #{search_form.generated_geolocation}"
+                button.test data-category=main.name
+                  - puts "<<<<<<<<<<<<<<< #{main.inspect}"
+                  = main.name
+
+// javascript:
+//   function setHiddenFieldAndSubmit(category) {
+//     $('input[name="search_form[category]"]').val(category)
+//     $('#new_search_form').submit()
+//   };
