--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -28,11 +28,5 @@
               li.nav-sections__listitem(
                 class="nav-sections__listitem--#{main.icon}"
               )
-                button.test data-category=main.name
+                button data-category=main.name
                   = main.name
-
-// javascript:
-//   function setHiddenFieldAndSubmit(category) {
-//     $('input[name="search_form[category]"]').val(category)
-//     $('#new_search_form').submit()
-//   };
