Feature/993 contact form changes (#1021)
* clarat-org/clarat#993 Kontaktformular: Responsivität & Dankesseite

Anstatt einer statischen wird der Inhalt dynamisch verändert.
betrifft auch clarat-org/clarat#960 (braucht pull auf Clarat_base)

* feature/993 color fix and popup-close on click

clarat-org/clarat#993

* feature/993_zurück zu Family/Refugees

clarat-org/clarat#960
clarat-org/clarat#993

* refactor to presenter logic

clarat-org/clarat#993
Kontaktformular: Responsivität & Dankesseite

* clarat-org/clarat#1021 Feature/993 contact form changes

removed indentation & rubocop problems and merged with develop

* for #993 - refactoring contact form presenter :+1:

--- a/app/assets/stylesheets/modules/_js.scss
+++ b/app/assets/stylesheets/modules/_js.scss
@@ -13,4 +13,7 @@
   &.JS-Single-Click-Button__active {
     cursor: default;
   }
+  &.JS-ContactForm-Button__finish {
+    background-color: #8cbd86;
+  }
 }
