--- a/app/views/contacts/shared/_new.html.slim
+++ b/app/views/contacts/shared/_new.html.slim
@@ -1,7 +1,15 @@
 - reporting = contact.reporting?
 = simple_form_for contact, html: { class: 'contact-form' }, remote: true do |f|
   - if reporting
-    p= t('.send_us_a_message')
+    p.contact_heading= t('.send_us_a_message')
+    p.success_message style=("display: none;") = t('contacts.create.success')
+
+  - else
+    h2.contact_heading = t('contacts.new.contact_heading')
+    h2.success_message style=("display: none;") = t('contacts.create.success')
+    p.back_to_hp style=("display: none;")
+      a href="/refugees" = t('.back_to_hp')
+
   = f.input :name, label: false, hint: false,
                    input_html: { placeholder: t('.name_placeholder') }
   = f.input :email, label: false, hint: false,
@@ -9,9 +17,11 @@
                     input_html: { \
                       placeholder: \
                         t(".email_placeholder.required.#{!reporting}") }
+  = f.input :city, label: false, hint: false,
+                    input_html: { placeholder: t('.city_placeholder') }
   = f.input :message, label: false, hint: false,
                       input_html: { placeholder: t('.message_placeholder') }
   = f.input :url, as: :hidden
   = f.input :reporting, as: :hidden
   button.Contact-Submit.JS-Single-Click-Button
-    = t '.send'
+      = t '.send'
