--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,6 +7,7 @@
 @import "config/variables";
 @import "config/helpers";
 @import "config/mixins";
+@import "config/animation";
 
 @import "base/normalize";
 @import "base/typography";
