--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -162,7 +162,7 @@
     min-height: 58px;
     max-height: 98px;
     width: auto;
-
+    overflow: visible;
 
     body.ar & {
       padding: 10px 15px 0 0;
@@ -465,7 +465,7 @@
   .section-start__headline {
     height: 35px;
     font-size: 16px;
-    line-height: 37px;
+    line-height: 28px;
   }
 
   .section-start__body {
