--- a/app/assets/stylesheets/modules/_js-modal.scss
+++ b/app/assets/stylesheets/modules/_js-modal.scss
@@ -20,6 +20,7 @@
     margin-top: 0;
   }
 
+  .modal__close,
   button[class$="overlay_close"],
   button[class$="overlay_close greenOverlay"],
   button[class$="big-map_close"],
