--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -52,19 +52,19 @@
         button.section-content__toggle
           = t '.speaking'
 
+
       / More info "tags"
-      section.section-content.section-content--more-info
-        h3.section-content__title
-          = t '.trait_filters_headline'
+      - if @offer.trait_filters.any?
+        section.section-content.section-content--more-info
+          h3.section-content__title
+            = t '.trait_filters_headline'
 
-        ul.section-content__tag-list
-          - @offer.trait_filters.each do |filter|
-            - title = I18n.exists?("offers.show.trait_filters.explanation.#{filter.identifier}") ? \
-                t(".trait_filters.explanation.#{filter.identifier}") : nil
-            li[title=title]
-              = t ".trait_filters.title.#{filter.identifier}"
-
-
+          ul.section-content__tag-list
+            - @offer.trait_filters.each do |filter|
+              - title = I18n.exists?("offers.show.trait_filters.explanation.#{filter.identifier}") ? \
+                  t(".trait_filters.explanation.#{filter.identifier}") : nil
+              li[title=title]
+                = t ".trait_filters.title.#{filter.identifier}"
 
       section.section-content.section-content--whos-offering
         h3.section-content__title
