--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -34,7 +34,7 @@ div.Distributor__search-form
       = f.input :encounters, as: :hidden
       = f.input :age, as: :hidden
       = f.input :target_audience, as: :hidden
-      = f.input :exclusive_gender, as: :hidden
+      = f.input :gender_first_part_of_stamp, as: :hidden
       = f.input :language, as: :hidden
       = f.input :sort_order, as: :hidden
       = f.input :section, as: :hidden
