--- a/app/assets/stylesheets/form/_filter-form.scss
+++ b/app/assets/stylesheets/form/_filter-form.scss
@@ -130,7 +130,7 @@
     }
   }
 
-  &#exclusive_gender {
+  &#gender_first_part_of_stamp {
     -ms-flex-order: 3;
     -webkit-order: 3;
     order: 3;
