--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -547,7 +547,7 @@
       order: 3;
     }
 
-    &#exclusive_gender {
+    &#gender_first_part_of_stamp {
       -webkit-order: 2;
       -ms-flex-order: 2;
       order: 2;
