Feature/876 more info box (#1084)
* Add first graphical proposal for "more info box"

* Design proposal, needs approval, faking tags

* For #876: style and implement trait_filter items, with explanation where available

* For #876, code review #1084: locale-ized headline

* For #876: Only try to render trait filters if there are any

--- a/app/assets/stylesheets/modules/sections/_section-offer.scss
+++ b/app/assets/stylesheets/modules/sections/_section-offer.scss
@@ -31,7 +31,30 @@
     }
   }
 
+  .section-content--more-info {
+    @extend %clearfix;
 
+    .section-content__title {
+      background: $brand_green;
+    }
+  }
+
+  .section-content__tag-list {
+    @extend %clearfix;
+    list-style: none;
+    margin: 4px 15px 10px;
+
+    li {
+      float: left;
+      display: inline-block;
+      margin: 6px 15px 0 0;
+      border-bottom: 1px dashed transparent;
+
+      &[title] {
+        border-color: $brand_brown;
+      }
+    }
+  }
 
   .section-content--what {
 
