--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,16 +2,17 @@ doctype html
 html class='no-js' lang=I18n.locale dir="#{(I18n.locale==:ar || I18n.locale==:fa)?'rtl':'ltr'}"
   head
     meta charset="utf-8"
-    title
-      = full_title(yield(:title))
 
+    meta name="twitter:card" content="summary"
     - og_title = yield(:meta_title)
     - if !og_title.blank?
       meta property="og:title" content=og_title
       meta property="twitter:title" content=og_title
+      title = og_title
     - else
       meta property="og:title" content=t("pages.home.meta_title.#{@current_section}")
       meta property="twitter:title" content=t("pages.home.meta_title.#{@current_section}")
+      title = t("pages.home.meta_title.#{@current_section}")
 
     - meta_description = yield(:meta_description)
     - if !meta_description.blank?
@@ -24,11 +25,15 @@ html class='no-js' lang=I18n.locale dir="#{(I18n.locale==:ar || I18n.locale==:fa
       meta name='twitter:description' content=t("pages.home.meta_description.#{@current_section}")
 
     - og_image = yield(:og_image)
-    - if og_image
+    - if !og_image.blank?
+      meta property="og:image" content=og_image
+    - else
       meta property="og:image" content=asset_url("meta/og_#{@current_section}.png")
 
     - twitter_image = yield(:twitter_image)
-    - if twitter_image
+    - if !twitter_image.blank?
+      meta property="twitter:image" content=twitter_image
+    - else
       meta property="twitter:image" content=asset_url("meta/tw_#{@current_section}.png")
 
     meta property="og:site_name" content="clarat"
