For #1019: Fix last commit

--- a/app/assets/stylesheets/modules/_section-choice.scss
+++ b/app/assets/stylesheets/modules/_section-choice.scss
@@ -53,6 +53,7 @@
   color: $brand_white;
   text-decoration: none;
   margin: -1px 28px 0;
+  padding: 6px 7px 9px 60px;
   font-size: 27px;
   display: flex;
   align-items: center;
